# Checkmate-Chariot

./: .clang-format  .devnote1  .devnotes  .gitignore  CMakeLists.txt  Checkmate-Chariot-Tests[1]_include.cmake  LICENSE.txt  README.md  bishopHash  bishopHash1  clang-format-parfor.py  clang-format.sh  hashRook  hashRook1  main.cpp  my.path  test.c  test_output.csv
.github/workflows/: clang-format-checker.sh  clang-format.yml  google-tests.yml  release.yml
Docs/: LMR_plot_1.ods  Main concepts and definitions  Untitled.xcf  note1.xopp
EloEval/: EloEval  FastSearchTest.py  RunVersionTest.sh  TestRunner.py  clear-logs.sh  clear-pgns.sh  cutechess-installer.bash  engines.json  engines.py  fast_search_test.bash  install-c-chess-cli.sh  parse_debug.py  perform-elo-test.py  prepare_env.py  test.bash
EloEval/ReferenceEngines/: Checkmate-Chariot-dev_gdb  Checkmate-Chariot_gdb  GDBRunner.bash  params1.txt  params_run.py
EloEval/ReferenceEngines/DownloadScripts/: Checkmate-Chariot.sh  Maxwell.sh  dumb.sh  maxwell.sh  pingu.sh  princhess.sh  saruman.sh  snowy.sh  stockfish.sh  winter.sh
EloEval/Tournaments/: short_test_tournament.bash  tournament_func.bash
Tests/: .devnotes  .gitignore  TestDescriptions  perfTest1.csv  positionTests.csv  searchTests.csv  search_perf_out.csv  search_perf_outcp.csv  singlePos.csv
Tests/GameTimeManagerTimePlot/: GameTimeManagerTimePlot.py  requirements.txt
Tests/ProfileSets/: set1.csv
include/: .devnotes  BishopMap.h  BitOperations.h  Board.h  ChessEngine.h  ChessMechanics.h  CompilationConstants.h  Engine.h  EngineTests.h  EngineTypeDefs.h  EngineUtils.h  Evaluator.h  FenTranslator.h  KingMap.h  KnightMap.h  Logger.h  MoveGeneration.h  MovesHashMap.h  ParseTools.h  PawnMap.h  QueenMap.h  RookMap.h  SearchThreadCordination.h  SearchingMachine.h  Todo.h  TunableParameters.h  UCIOptions.h  UCITranslator.h  cmakeDefines.h  cmakeDefines.h.in  compilationConstants.h  movesHashMap.h
include/Evaluation/: .devnotes  BoardEvaluator.h  BoardEvaluatorPrinter.h  ContinuationHistory.h  CounterMoveTable.h  HistoricTable.h  KillerTable.h  KingSafetyEval.h  KingSafetyFields.h  MoveSortEval.h  StatTable.h  StructureEvaluator.h
include/Interface/: .devnotes  FenTranslator.h  Logger.h  UCIOptions.h  UCITranslator.h
include/MapTypes/: .devnotes  FancyMagicBishopMap.h  FancyMagicRookMap.h  HashFunctions.h  MapScheme.h  ModuloFreeBishopMap.h  ModuloFreeNoOffsetBishopMap.h  ModuloFreeNoOffsetRookMap.h  ModuloFreeRookMap.h  SimpleBishopMap.h  SimpleRookMap.h
include/MoveGeneration/: .devnotes  BishopMap.h  BishopMapGenerator.h  BlackPawnMap.h  ChessMechanics.h  FileMap.h  KingMap.h  KnightMap.h  Move.h  MoveGeneration.h  MoveGenerationUtils.h  MoveGenerator.h  PawnMap.h  PinningMask.h  QueenMap.h  RookMap.h  RookMapGenerator.h  SparseRandomGenerator.h  WhitePawnMap.h
include/OpeningBook/: .devnotes  BookTester.h  MoveTRIE.h  OpeningBook.h
include/Search/: .devnotes  BestMoveSearch.h  MoveIterator.h  TranspositionTable.h  TranspositionTables.h  ZobristHash.h
include/TestsAndDebugging/: .devnotes  BookTester.h  CsvOperator.h  DebugTools.h  MapCorrectnessTest.h  MapPerformanceTest.h  MapPerformanceTester.h  MoveGenerationTests.h  SearchPerfTester.h  StateReconstructor.h  TestSetup.h
include/ThreadManagement/: .devnotes  GameTImeManagerUtils.h  GameTimeManager.h  GameTimeManagerUtils.h  SearchThreadManager.h  Stack.h  stack.h
resources/: .devnotes  opening  uci_ready
scripts/: clang-format-parfor.py  clang-format.sh  clean-cmake.sh  parse_chess_cli_logs.py  parse_lichess_log.py  parserTools.py  profile.bash
src/: .devnotes  BestMoveSearch.cpp  BishopMap.cpp  Board.cpp  BoardEvaluator.cpp  BoardEvaluatorPrinter.cpp  BookTester.cpp  ChessEngine.cpp  ChessMechanics.cpp  CounterMoveTable.cpp  CsvOperator.cpp  DebugTools.cpp  Engine.cpp  EngineTests.cpp  EngineTypeDefs.cpp  EngineUtils.cpp  Evaluator.cpp  FancyMagicBishopMap.cpp  FancyMagicRookMap.cpp  FenTranslator.cpp  GameTimeManager.cpp  GameTimeManagerUtils.cpp  HistoricTable.cpp  KillerTable.cpp  KingMap.cpp  KingSafetyEval.cpp  KingSafetyFields.cpp  KnightMap.cpp  Logger.cpp  MapCorrectnessTest.cpp  MapPerformanceTest.cpp  Move.cpp  MoveGenerationTests.cpp  MoveGenerator.cpp  MoveIterator.cpp  MoveSortEval.cpp  MoveTRIE.cpp  OpeningBook.cpp  ParseTools.cpp  PawnMap.cpp  (+10 more)
tests/: BoardEvaluator.cc  CalcTimePerMove.cc  ChessMechanics.cc  GameTimeManager.cc  Logger.cc  SearchTests.cc  TestingGoogleTests.cc  UCITranslator.cc
tune/: .gitignore  Checkmate-Chariot-Adapter.py  clean-up.sh  engines.json  extract_params.py  params  prepare_clop.bash  run_clop.bash  setup_params.py
tune/clop_src/: CHANGES  REQUIREMENTS.md
tune/clop_src/programs/_general/compgcc/: dep.mk  options.mk
tune/clop_src/programs/_general/swig/: check-pythonappend.sh  gen_setup  general_setup.py  setup_template.py  swig.mk
tune/clop_src/programs/clop/compgcc/: clop.mk  makefile
tune/clop_src/programs/clop/src/: C2SPSA.cpp  C2SPSA.h  CAPSurface.h  CBAST.cpp  CBAST.h  CCrossEntropy.cpp  CCrossEntropy.h  CDFConfidence.cpp  CDFConfidence.h  CDFConfidenceBound.cpp  CDFConfidenceBound.h  CDFExpectedMC.cpp  CDFExpectedMC.h  CDFLogP.h  CDFParametric.h  CDFRatingLCB.cpp  CDFRatingLCB.h  CDFVariance.cpp  CDFVariance.h  CDFVarianceAlpha.cpp  CDFVarianceAlpha.h  CDFVarianceDelta.cpp  CDFVarianceDelta.h  CEigenSystem.cpp  CEigenSystem.h  CMEQLRLCB.cpp  CMEQLRLCB.h  CMERegressionMAPMax.h  CMESampleMean.cpp  CMESampleMean.h  CMaxEstimator.h  CObserver.cpp  CObserver.h  COutcome.h  CPFConcave.cpp  CPFConcave.h  CPFConstant.cpp  CPFConstant.h  CPFCubic.cpp  CPFCubic.h  (+42 more)
tune/clop_src/programs/clop/swig/: .gitignore  clop.py  clop_swig.i  clop_swig.py  clop_swig_wrap.cxx  experiment.py  experiment_builder.py  gnuplot.py  i.tmp  py.tmp
tune/clop_src/programs/math/src/: CLUTestCUI.cpp  CLUTestCUI.h  CMatrix.cpp  CMatrix.h  CMatrixIO.cpp  CMatrixIO.h  CValueWithGradient.cpp  CValueWithGradient.h  FPUControl.cpp  lutest.cpp  pi.h  vgtest.cpp
tune/clop_src/programs/plot/compgcc/: plot.mk
tune/tests_sets/set2/: Checkmate-Chariot-Set2.clop
(+208 files in other folders)
